# practical-rust-project-catsay

./: Cargo.toml  README.md  output.txt  stderr.txt
src/: main.rs
tests/: integration_test.rs
