[package]
name = "catsay"
version = "0.1.0"
authors = ["Solleter <Solleter@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
colored = "1.8.0"
failure = "0.1.6"
exitfailure = "0.5.1"
assert_cmd = "0.11.1"
predicates = "1.0.1"